my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EZRANGE/EZRANGE.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EZRANGE.dml:10:22: error EZRANGE: array range must start at 0
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EZRANGE.dml:12:22: error EZRANGE: array range must start at 0
